# pyqt_spectrum

./: LICENSE  main.py  project.pre-commit-config.yaml  project.ruff.toml  pyproject.toml  spectrum_app.py  spectrum_canvas.py  spectrum_logic.py
